import "maidsafe_service_messages.proto";

package maidsafe;

service MaidsafeService {
  rpc StoreChunkPrep( StorePrepRequest ) returns ( StorePrepResponse );
  rpc StoreIOU( StoreIOURequest ) returns ( StoreIOUResponse );
  rpc IOUDone( IOUDoneRequest ) returns ( IOUDoneResponse );
  rpc StoreChunk( StoreRequest ) returns ( StoreResponse );
  rpc StorePacket( StoreRequest ) returns ( StoreResponse );
  rpc StoreChunkReference( StoreReferenceRequest )
      returns ( StoreReferenceResponse );
  // check if a chunk exists
  rpc CheckChunk( CheckChunkRequest ) returns ( CheckChunkResponse );
  rpc Get( GetRequest ) returns ( GetResponse );
  rpc Update( UpdateRequest ) returns ( UpdateResponse );
  rpc GetMessages( GetMessagesRequest ) returns ( GetMessagesResponse );
  rpc Delete( DeleteRequest ) returns ( DeleteResponse );
  rpc ValidityCheck( ValidityCheckRequest ) returns ( ValidityCheckResponse );
  rpc SwapChunk( SwapChunkRequest ) returns ( SwapChunkResponse );
  rpc VaultStatus( VaultStatusRequest ) returns ( VaultStatusResponse );
}

service VaultRegistration {
  rpc OwnVault(OwnVaultRequest) returns (OwnVaultResponse);
  rpc IsVaultOwned(IsOwnedRequest) returns (IsOwnedResponse);
}
